--- a/styles/scssfiles/Header/_header.scss
+++ b/styles/scssfiles/Header/_header.scss
@@ -116,7 +116,7 @@
     .container{
       .nav_group{
         //transform: translateY(264px);
-        top: 72px;
+        top: 30px;
       }
     }
   }
